--- a/style.css
+++ b/style.css
@@ -1,20 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 :root{
     --cor-do-texto: #0A3871;
-    --cor-do-fundo: #EFF1FA;
-}
+    --cor-do-fundo: #f3f5fc; 
 
+}
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: var(--cor-do-fundo)
+
 }
 
 body {
     height: 100vh;
     color: var(--cor-do-texto);
+    background-color: var(--cor-do-fundo);
+    font-family: "Inter", sans-serif;
+
 }
+
 header{
     display: flex;
     flex-direction: row;
@@ -22,20 +28,129 @@ header{
     height: 100px;
 }
 
-.apresentacao { 
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 10%;
-}
-
-.apresentacao_logo{
+.header__logo {
     width: 120px;
-    margin: 10%;
+    height: 48px;
+
+  }
+
+main { 
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 100px;
 
 }
 
-.apresentacao_conteudo{
-    width: 680px; 
-    height: 48px; 
+h1{
+    font-size: 32px;
+    font-weight: 400;
 }
+
+.conteudo_esquerda{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.conteudo_esquerda_exclamacao{
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+    padding-bottom: 5px;
+    color: #495057;
+    
+
+}
+
+.conteudo_esquerda_botoes{
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+    margin-bottom: 40px;
+    
+}
+
+.botao_criptografar{
+    width: 328px;
+    height: 67px;
+    padding: 24px;
+    border-radius: 24px;
+    background-color: var(--cor-do-texto);
+    color: var(--cor-do-fundo);
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+   
+    
+}
+
+.botao_descriptografar{
+    width: 328px;
+    height: 67px;
+    padding: 24px;
+    border-radius: 24px;
+    background-color: #D8DFE8;
+    color: var(--cor-do-texto);
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+    border: 1px solid #0a3871;
+
+}
+
+.conteudo_direita{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    background-color: white;
+    width: 400px;
+    height: 700px;
+    border-radius: 32px;
+
+}
+
+.conteudo_direita_imagem{
+    width: 336px;
+    height: 304px;
+}
+
+.botao_copiar{
+
+    width: 328px;
+    height: 67px;
+    padding: 24px;
+    border-radius: 24px;
+    background-color: #D8DFE8;
+    border: 1px solid #0a3871;
+    color: var(--cor-do-texto);
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+}
+
+.conteudo_direita_texto{
+    padding: 24px;
+    color: var(--cor-texto);
+    background-color: #ffffff;
+    text-align: center;
+}
+.conteudo_direita_paragrafo {
+    width: 360px;
+    height: 100px;
+    padding: 24px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0em;
+    color: var(--cor-do_texto);
+    background-color: #ffffff;
+  }
+
+
+
+
