--- a/styles/style.css
+++ b/styles/style.css
@@ -3,21 +3,18 @@
 :root{
     --cor-do-texto: #0A3871;
     --cor-do-fundo: #f3f5fc; 
-
 }
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
 }
 
 body {
     color: var(--cor-do-texto);
     background-color: var(--cor-do-fundo);
     font-family: "Inter", sans-serif;
-
 }
 
 header{
@@ -30,7 +27,6 @@ header{
 .header__logo {
     width: 120px;
     height: 48px;
-
   }
 
 main { 
@@ -39,13 +35,25 @@ main {
     justify-content: center;
     flex-wrap: wrap;
     gap: 100px;
-
 }
 
-h1{
+ .mensagem__textarea {
+    width: 680px;
+    height: 100px;
+    margin-top: 100px;
     font-size: 2rem;
     font-weight: 400;
-}
+    line-height: 48px;
+    letter-spacing: 0em;
+    text-align: left;
+    cursor: pointer;
+    overflow: hidden;
+    resize: none;
+    outline: none;
+    border: none;
+    color: var(--cor-do-texto);
+    background-color: var(--cor-do-fundo);
+  }
 
 .conteudo_esquerda{
     display: flex;
@@ -58,21 +66,14 @@ h1{
     flex-direction: row;
     gap: 5px;
     padding-bottom: 5px;
-    color: #495057;
-    
-
+    color: #495057; 
 }
 
 .conteudo_esquerda_botoes{
     display: flex;
     flex-direction: row;
     gap: 24px;
-    margin-bottom: 40px;
-    
-}
-
-.conteudo_esquerda_botoes:hover {
-
+    margin-bottom: 40px;  
 }
 
 .botao_criptografar{
@@ -84,9 +85,7 @@ h1{
     color: var(--cor-do-fundo);
     font-size: 1rem;
     font-weight: 400;
-    text-align: center;
-   
-    
+    text-align: center;      
 }
 
 .botao_descriptografar{
@@ -100,7 +99,6 @@ h1{
     font-weight: 400;
     text-align: center;
     border: 1px solid #0a3871;
-
 }
 
 .conteudo_direita{
@@ -113,7 +111,6 @@ h1{
     width: 400px;
     height: 700px;
     border-radius: 32px;
-
 }
 
 .conteudo_direita_imagem{
@@ -140,6 +137,7 @@ h1{
     background-color: #ffffff;
     text-align: center;
 }
+
 .conteudo_direita_paragrafo {
     width: 360px;
     height: 100px;
@@ -153,6 +151,25 @@ h1{
     background-color: #ffffff;
   }
 
+
+.resultado_direita {
+  width: 360px;
+  height: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0em;
+  color: var(--cor-texto);
+  background-color: #ffffff;
+  text-transform: uppercase;
+  overflow: hidden;
+  white-space: normal;
+  text-overflow: ellipsis;
+}
+
   .rodape{
     display: flex;
     flex-direction: column;
@@ -162,6 +179,10 @@ h1{
     height: 90px;
     gap: 4px;
     font-family: "Inter", sans-serif;
+  }
+
+  .ocultar {
+    display: none;
   }
 
   /* Estilo para telas entre 481px e 768px (iPads e tablets) */
